# ChangeLog for app-emulation/domi
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/domi/ChangeLog,v 1.12 2010/08/20 17:00:42 jer Exp $

  20 Aug 2010; Jeroen Roovers <jer@gentoo.org> domi-20060630.ebuild,
  domi-20060816.ebuild:
  Move from sys-apps/parted to sys-block/parted.

  05 Oct 2008; Thilo Bangert <bangert@gentoo.org>
  +files/fix_install_links.patch, domi-20060816.ebuild:
  fix install of symlinks - bug# 219947

*domi-20060816 (01 Oct 2008)

  01 Oct 2008; Thilo Bangert <bangert@gentoo.org> +domi-20060816.ebuild:
  version bump - by Thomas Pani - bug #146338

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  05 Jan 2007; Danny van Dyk <kugelfang@gentoo.org>
  -domi-20060406-r3.ebuild:
  QA: Removed unused versions.

*domi-20060630 (04 Aug 2006)

  04 Aug 2006; Chris Bainbridge <chrb@gentoo.org> +domi-20060630.ebuild:
  Bump thanks to Andrew Ross, #136726.

  10 Jun 2006; Chris Bainbridge <chrb@gentoo.org> -domi-20060406-r2.ebuild:
  remove old version

  10 Jun 2006; Chris Bainbridge <chrb@gentoo.org> domi-20060406-r3.ebuild:
  Don't run tests as they require root privs. Bug #136267.

*domi-20060406-r3 (10 Jun 2006)

  10 Jun 2006; Chris Bainbridge <chrb@gentoo.org> files/domi.conf,
  +domi-20060406-r3.ebuild:
  Added DEPEND on yum, bug #133848. Fix DOMI_DISK_VG, bug #136241

*domi-20060406-r2 (03 Jun 2006)

  03 Jun 2006; Chris Bainbridge <chrb@gentoo.org> -domi-20060406-r1.ebuild,
  +domi-20060406-r2.ebuild:
  Add depend for kpartx, thanks to Andrew Ross in bug #135357

*domi-20060406-r1 (19 May 2006)

  19 May 2006; <chrb@gentoo.org> -domi-20060406.ebuild,
  +domi-20060406-r1.ebuild:
  fix udev loopback device, thanks to marduk in #130855

*domi-20060406 (10 Apr 2006)

  10 Apr 2006; Chris Bainbridge <chrb@gentoo.org> +files/domi.conf,
  +metadata.xml, +domi-20060406.ebuild: