@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/domi
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/domi/ChangeLog,v 1.12 2010/08/20 17:00:42 jer Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/domi/ChangeLog,v 1.13 2012/05/10 14:56:13 ago Exp $
+
+  10 May 2012; Agostino Sarubbo <ago@gentoo.org> -domi-20060630.ebuild:
+  Remove old
 
   20 Aug 2010; Jeroen Roovers <jer@gentoo.org> domi-20060630.ebuild,
   domi-20060816.ebuild:
